# whisperX

./: .gitignore  .test.env.example  pyproject.toml
tests/: conftest.py  test_ars.py
tests/fixtures/: dataset.py  hf_token.py  model.py
tests/utils/: load_dataset.py
typings/ctranslate2/: __init__.pyi  _ext.pyi  extensions.pyi  logging.pyi
typings/ctranslate2/converters/: __init__.pyi  converter.pyi  fairseq.pyi  marian.pyi  openai_gpt2.pyi  opennmt_py.pyi  opennmt_tf.pyi  opus_mt.pyi  transformers.pyi  utils.pyi
typings/ctranslate2/models/: __init__.pyi
typings/ctranslate2/specs/: __init__.pyi  attention_spec.pyi  common_spec.pyi  model_spec.pyi  transformer_spec.pyi  whisper_spec.pyi
typings/pyannote/audio/: __init__.pyi
typings/pyannote/audio/augmentation/: __init__.pyi  mix.pyi  registry.pyi
typings/pyannote/audio/cli/: __init__.pyi  evaluate.pyi  pretrained.pyi  train.pyi
typings/pyannote/audio/cli/lr_schedulers/: CosineAnnealingWarmRestarts.pyi  CyclicLR.pyi  ReduceLROnPlateau.pyi  __init__.pyi
typings/pyannote/audio/core/: callback.pyi  inference.pyi  io.pyi  model.pyi  pipeline.pyi  task.pyi
typings/pyannote/audio/pipelines/: __init__.pyi  clustering.pyi  multilabel.pyi  overlapped_speech_detection.pyi  resegmentation.pyi  speaker_diarization.pyi  speaker_verification.pyi  voice_activity_detection.pyi
typings/pyannote/audio/pipelines/utils/: __init__.pyi  diarization.pyi  getter.pyi  hook.pyi  oracle.pyi
typings/pyannote/audio/tasks/: __init__.pyi
typings/pyannote/audio/tasks/embedding/: arcface.pyi  mixins.pyi
typings/pyannote/audio/torchmetrics/: __init__.pyi
typings/pyannote/audio/utils/: loss.pyi  metric.pyi  multi_task.pyi  params.pyi  permutation.pyi  powerset.pyi  preprocessors.pyi  preview.pyi  probe.pyi  protocol.pyi  random.pyi  reproducibility.pyi  signal.pyi  version.pyi
typings/pyannote/core/: __init__.pyi  annotation.pyi  feature.pyi  notebook.pyi  segment.pyi  timeline.pyi
typings/pyannote/core/utils/: cluster.pyi  distance.pyi  generators.pyi  helper.pyi  hierarchy.pyi  numpy.pyi  random.pyi  types.pyi
typings/pyannote/database/: __init__.pyi  cli.pyi  custom.pyi  database.pyi  file_finder.pyi  loader.pyi  registry.pyi  util.pyi
typings/pyannote/database/protocol/: __init__.pyi  collection.pyi  protocol.pyi  segmentation.pyi  speaker_diarization.pyi  speaker_identification.pyi  speaker_recognition.pyi  speaker_spotting.pyi  speaker_verification.pyi
typings/pyannote/metrics/: __init__.pyi  base.pyi  binary_classification.pyi  cli.pyi  detection.pyi  diarization.pyi  identification.pyi  matcher.pyi  segmentation.pyi  spotting.pyi  types.pyi  utils.pyi
typings/pyannote/metrics/errors/: identification.pyi  segmentation.pyi
typings/pyannote/metrics/plot/: binary_classification.pyi
typings/pyannote/pipeline/: __init__.pyi  experiment.pyi  optimizer.pyi  parameter.pyi  pipeline.pyi  typing.pyi
typings/pyannote/pipeline/blocks/: __init__.pyi  classification.pyi  clustering.pyi
whisperx/: __init__.py  alignment.py  audio.py  conjunctions.py  diarize.py  subtitles_processor.py  transcribe.py  types.py
whisperx/alignment/: __init__.py  constants.py  types.py  utils.py
whisperx/asr/: __init__.py  batching_whisper.py  batching_whisper_pipeline.py  faster_whisper_pipeline.py  types.py  utils.py  whisper_model.py
whisperx/diarize/: __init__.py  types.py  utils.py
whisperx/logging/: __init__.py
whisperx/utils/: __init__.py  convert_path.py
whisperx/vad/: __init__.py  binarize.py  download_model.py  types.py  utils.py  vad_model.py  vad_pipeline.py
(+10 files in other folders)
